fix: added displaying of layout body header on mobile

--- a/src/layouts/Layout/Layout.module.css
+++ b/src/layouts/Layout/Layout.module.css
@@ -65,7 +65,7 @@
   }
 
   .body {
-    margin: 0 5vw;
+    margin: 4.5rem 5vw 0;
   }
 
   .logo,
